      - [API break] 'getSortedPinnedVersions': renamed to
        getSortedVersionsWithPriorities.
      - Parsing extended states: don't choke on records without
        'Auto-Installed' field.
      - [ABI break] ExtendedInfo: new member 'raw'.
    - system/snapshots:
      - 'setupResolverForSnapshotOnly': don't reinstall equal versions.
        The regression was introduced in 2.6.0.
  * doc:
    - cmakelists:
      - Added rules building man pages from PODs.
    - examples:
      - Added 'show-available' example.
  * debian:
    - control:
      - Added 'Breaks: dpkg (<< 1.17.11~)' for versioned provides support.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 21:26:32 +0300

cupt (2.8.4) unstable; urgency=medium

  * lib:
    - system/worker:
      - 'changeSystem': preinstall hooks: pass original version strings of
        installed versions, not id-suffixed ones. (Closes: #764754)
    - cache:
      - Version pinning: fixed matching version strings of installed versions.
        (Closes: #764238)
    - system/resolvers/native:
      - Reverted 'fixed failing to satisfy 'remove x --no-remove'-kinds of
        requests', so 'no-remove' option works again for any kind of user
        requests. This now includes explicit ones as well, so
        'remove x --no-remove' are now expected to fail if 'x' is manually
        installed package. The regression was introduced in 2.7.3.
  * cmakelists:
    - Added '-pthread' to compiling and linking flags. (Closes: #760489)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 19 Oct 2014 20:50:23 +0300

cupt (2.8.3) unstable; urgency=medium

  * lib:
    - config:
      - New option 'cupt::console::actions-preview::show-empty-versions'.
    - system/resolvers/native:
      - For equal-scored version change variants, propose higher versions
        first. The regression for some typical upgrade situations was
        introduced in 2.8.0, the regression for some typical non-upgrade