@@ -57,24 +57,21 @@ class CUPT_API Package
 {
 	vector< unique_ptr< Version > > __parsed_versions;
 
-	CUPT_LOCAL void __merge_version(unique_ptr< Version >&&);
+	CUPT_LOCAL void __merge_version(const string&, unique_ptr< Version >&&);
 
 	Package(const Package&);
 	Package& operator=(const Package&);
  protected:
 	/// @cond
-	const string* _binary_architecture;
+	;
 
 	CUPT_LOCAL const vector< unique_ptr< Version > >& _get_versions() const;
 	CUPT_LOCAL virtual unique_ptr< Version > _parse_version(const internal::VersionParseParameters&) const = 0;
-	CUPT_LOCAL virtual bool _is_architecture_appropriate(const Version*) const = 0;
+	CUPT_LOCAL virtual bool _is_architecture_appropriate(const string&, const Version*) const = 0;
 	/// @endcond
  public:
 	/// constructor
-	/**
-	 * @param binaryArchitecture binary architecture of the system
-	 */
-	Package(const string* binaryArchitecture);
+	Package();
 	/// destructor
 	virtual ~Package();
 	/// @cond
