@@ -32,14 +32,11 @@ class CUPT_API SourcePackage: public Package
  protected:
 	/// @cond
 	CUPT_LOCAL virtual unique_ptr< Version > _parse_version(const internal::VersionParseParameters&) const;
-	CUPT_LOCAL virtual bool _is_architecture_appropriate(const Version*) const;
+	CUPT_LOCAL virtual bool _is_architecture_appropriate(const string&, const Version*) const;
 	/// @endcond
  public:
 	/// constructor
-	/**
-	 * @param binaryArchitecture system binary architecture
-	 */
-	SourcePackage(const string* binaryArchitecture);
+	SourcePackage();
 	vector< const SourceVersion* > getVersions() const;
 
 	typedef internal::BasePackageIterator< SourceVersion > iterator;
